fix: update configs/kea_eth_provisioner lease db
Change-Id: I8e3a573dbf860cfb2b6549e7c4596e24536a1ed3
Signed-off-by: Michele Gualco <mgualco.contractor@libertyglobal.com>
Reviewed-on: http://gerrit.cicd.boardfarm.upclabs.com/c/github/boardfarm/+/1514
Tested-by: Jenkins Automation
Reviewed-by: Ketan Tewari <ktewari.contractor@libertyglobal.com>

--- a/boardfarm3/configs/kea_eth_provisioner6.conf
+++ b/boardfarm3/configs/kea_eth_provisioner6.conf
@@ -12,7 +12,7 @@
         "lease-database": {
             "type": "memfile",
             "persist": true,
-            "name": "/var/lib/dhcp6.leases",
+            "name": "/var/lib/kea/dhcp6.leases",
             "lfc-interval": 540
         },
         "client-classes": [
