--- a/boardfarm3/configs/kea_eth_provisioner4.conf
+++ b/boardfarm3/configs/kea_eth_provisioner4.conf
@@ -23,7 +23,7 @@
         "lease-database": {
             "type": "memfile",
             "persist": true,
-            "name": "/var/lib/dhcp4.leases",
+            "name": "/var/lib/kea/dhcp4.leases",
             "lfc-interval": 540
         },
         "expired-leases-processing": {
