feat: prplos gui tests
Change-Id: I9f94bde9027abbaf40485bbfe09959e784ede660
Signed-off-by: Michele Gualco <mgualco.contractor@libertyglobal.com>
Reviewed-on: http://gerrit.cicd.boardfarm.upclabs.com/c/github/boardfarm/+/1520
Tested-by: Jenkins Automation
Reviewed-by: Ketan Tewari <ktewari.contractor@libertyglobal.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ dependencies = [
     "pyasn1==0.6.0",
     "requests",
     "rich",
+    "selenium<4.15.0",
     "xmltodict",
     "debtcollector",
     "scikit-image",  # image comparison
