fix: modify pre-commit to ignore tabs for makefile
BOARDFARM-6010

Change-Id: Id21580fb23c9238503e6ba953b6ebc058c0e6906
Signed-off-by: sravichandran.contractor <sravichandran.contractor@libertyglobal.com>
Reviewed-on: http://gerrit.cicd.boardfarm.upclabs.com/c/github/boardfarm/+/1572
Tested-by: Jenkins Automation
Reviewed-by: Michele Gualco <mgualco.contractor@libertyglobal.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -48,12 +48,12 @@ repos:
           - id: remove-crlf
             stages: [pre-commit]
           - id: remove-tabs
-            exclude: cm-cfg
+            exclude: cm-cfg|docs/Makefile
             stages: [pre-commit]
           - id: forbid-crlf
             stages: [pre-commit]
           - id: forbid-tabs
-            exclude: cm-cfg
+            exclude: cm-cfg|docs/Makefile
             stages: [pre-commit]
     - repo: https://github.com/myint/eradicate
       rev: 3.0.0
