--- a/pyproject.toml
+++ b/pyproject.toml
@@ -132,7 +132,7 @@ style = [
     ],
 ]
 tag_format = "$version"
-version = "2025.7.8"
+version = "2025.7.9a0"
 version_files = [
     "boardfarm3/__init__.py:version",
     "pyproject.toml:version",
@@ -152,7 +152,7 @@ warn_unreachable = true
 # Uncomment this if your project is hosted on GitHub:
 # github_url = "https://github.com/<user or organization>/<project>/"
 [tool.tbump.version]
-current = "2025.7.8"
+current = "2025.7.9a0"
 
 # Example of a semver regexp.
 # Make sure this matches current_version before
