refactor(boardfarm3/lib/odh): add odh to boardfarm
odh added to boardfarm repo

spinoff_of_BOARDFARM-6009

Change-Id: Ib900a67ba88c153d31e4e6e76719d8d1e58d47de
Signed-off-by: ahazra.ext <ahazra.ext@libertyglobal.com>
Reviewed-on: http://gerrit.cicd.boardfarm.upclabs.com/c/github/boardfarm/+/1933
Tested-by: Jenkins Automation
Reviewed-by: Ketan Tewari <ktewari.contractor@libertyglobal.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,8 @@ dependencies = [
     "pyasn1==0.6.0",
     "requests",
     "rich",
+    "kafka-python-ng",
+    "termcolor",
     "selenium<4.15.0",
     "xmltodict",
     "debtcollector",
