--- a/pyproject.toml
+++ b/pyproject.toml
@@ -134,7 +134,7 @@ style = [
     ],
 ]
 tag_format = "$version"
-version = "2025.7.10a13"
+version = "2025.8.11"
 version_files = [
     "boardfarm3/__init__.py:version",
     "pyproject.toml:version",
@@ -154,7 +154,7 @@ warn_unreachable = true
 # Uncomment this if your project is hosted on GitHub:
 # github_url = "https://github.com/<user or organization>/<project>/"
 [tool.tbump.version]
-current = "2025.7.10a13"
+current = "2025.8.11"
 
 # Example of a semver regexp.
 # Make sure this matches current_version before
