--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ dependencies = [
     "pytest",
     "PyYAML",
     "pyasn1==0.6.0",
+    "pysnmp-lextudio>=6,<6.1.2",
     "requests",
     "rich",
     "kafka-python-ng",
