docs(README): updated the documentation
Removed old information and how to guides.
Re-organized all images under one directory.
Added a getting started guide and developer documentation.

Change-Id: Ib7537fc9e674d368c9b5160857e8921d1af0be44
Signed-off-by: Ketan Tewari <ktewari.contractor@libertyglobal.com>
Reviewed-on: http://gerrit.cicd.boardfarm.upclabs.com/c/github/boardfarm/+/2318
Reviewed-by: Michele Gualco <mgualco.contractor@libertyglobal.com>
Tested-by: Jenkins Automation

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,6 +32,7 @@ repos:
             stages: [pre-commit]
           - id: check-added-large-files
             stages: [pre-commit]
+            args: [--maxkb=25600]
           - id: requirements-txt-fixer
             stages: [pre-commit]
           - id: check-merge-conflict
