docs(pyproject.toml): add extras for plugins
Update installation commands to show how to work with plugins.

Change-Id: Ic018526c3d035672efbb2d545ef9504cb05410f0
Signed-off-by: Ketan Tewari <ktewari.contractor@libertyglobal.com>
Reviewed-on: http://gerrit.cicd.boardfarm.upclabs.com/c/github/boardfarm/+/2382
Tested-by: Jenkins Automation
Reviewed-by: Michele Gualco <mgualco.contractor@libertyglobal.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,6 +79,8 @@ dev = [
 ]
 doc = ["sphinx", "mkdocs", "mkdocs-material"]
 test = ["pytest-cov", "pytest-mock", "pytest-randomly"]
+docsis = ["boardfarm3-docsis>=1.0.0"]
+pytest = ["pytest-boardfarm3>=1.0.0"]
 
 [project.scripts]
 boardfarm = "boardfarm3.main:main"
