fix(mkdocs: typo on architecture
Change-Id: I03e1205bd238e6b1f5a9ee5e138b7401d257102b
Signed-off-by: Ketan Tewari <ktewari.contractor@libertyglobal.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,6 +17,6 @@ plugins:
 nav:
     - Home: index.md
     - Getting Started: getting_started.md
-    - Architecure: architecture.md
+    - Architecture: architecture.md
     - Developer Docs: development.md
     - CHANGELOG: changelog.md
