--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,10 +9,60 @@ theme:
         - navigation.expand
         - search.suggest
         - search.highlight
+    palette:
+        - media: '(prefers-color-scheme: light)'
+          scheme: default
+          primary: indigo
+          accent: indigo
+          toggle:
+              icon: material/weather-sunny
+              name: Switch to dark mode
+
+        - media: '(prefers-color-scheme: dark)'
+          scheme: slate
+          primary: black
+          accent: lime
+          toggle:
+              icon: material/weather-night
+              name: Switch to system preference
 
 plugins:
     - search
-    - mkdocstrings
+    - autorefs
+    - mkdocstrings:
+          handlers:
+              python:
+                  options:
+                      docstring_style: sphinx
+                      backlinks: tree
+                      filters: public
+                      heading_level: 1
+                      inherited_members: true
+                      line_length: 88
+                      merge_init_into_class: true
+                      parameter_headings: true
+                      type_parameter_headings: true
+                      preload_modules: [mkdocstrings]
+                      relative_crossrefs: true
+                      scoped_crossrefs: true
+                      separate_signature: true
+                      show_bases: false
+                      show_inheritance_diagram: true
+                      show_root_heading: true
+                      show_root_full_path: false
+                      show_signature_annotations: true
+                      show_signature_type_parameters: true
+                      show_source: true
+                      show_symbol_type_heading: true
+                      show_symbol_type_toc: true
+                      signature_crossrefs: true
+                      summary: true
+                      unwrap_annotated: true
+                      extra:
+                          warnings: false
+
+extra_css:
+    - css/custom.css
 
 nav:
     - Home: index.md
@@ -20,3 +70,8 @@ nav:
     - Architecture: architecture.md
     - Developer Docs: development.md
     - CHANGELOG: changelog.md
+    - API Reference:
+          - Templates: reference/templates.md
+          - Use Cases: reference/use_cases.md
+          - Hooks: reference/hooks.md
+          - Lib: reference/libs.md
