fix: linting updates
Change-Id: I14fd5fa58bd0c4d46de8b2dbf1919e4865429a73
Signed-off-by: Michele Gualco <michele.gualco@infosys.com>
Reviewed-on: http://gerrit.cicd.boardfarm.upclabs.com/c/github/boardfarm/+/2523
Reviewed-by: Shakthi Ravichandran <sravichandran.contractor@libertyglobal.com>
Tested-by: Jenkins Automation
Reviewed-by: Ketan Tewari <ktewari.contractor@libertyglobal.com>
(cherry picked from commit e03190d03453d688def3cf58b97010fa710c6a56)
Reviewed-on: http://gerrit.cicd.boardfarm.upclabs.com/c/github/boardfarm/+/2527
Tested-by: Ketan Tewari <ktewari.contractor@libertyglobal.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -104,10 +104,11 @@ repos:
       hooks:
           - id: ruff
             # https://docs.astral.sh/ruff/formatter/#sorting-imports
-            args: [check, --select, I, --fix]
+            args: [check, --select, I, --fix, --diff]
             name: ruff-isort
             stages: [pre-commit]
           - id: ruff-format
+            args: [--diff]
             stages: [pre-commit]
           - id: ruff
             stages: [pre-commit]
