--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,7 +73,7 @@ jobs:
               run: python -m pip install --root-user-action ignore -e .[dev]
 
             - name: Start containers
-              run: docker compose -f "$DOCKER_COMPOSE_FILE" up -d --build
+              run: docker compose -f "$DOCKER_COMPOSE_FILE" up -d --quiet-pull
 
             - name: Run boot with boardfarm
               run: >
